<resources>
    <string name="app_name">DeevParty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="navigation_ListarEventos">Listar Eventos</string>
    <string name="navigation_NovoEvento">Novo Evento</string>
    <string name="navigation_CalculadoraBebidas">Calculadora de Bebidas</string>
    <string name="form_login">Login</string>
    <string name="form_senha">Senha</string>
    <string name="form_esquecerSenha">Esqueceu a sua Senha?</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="form_cadsatrese">Não possui uma conta? Cadastre-se</string>
    <string name="form_Email">Informe o seu Email!</string>
    <string name="form_Login">Informe o seu Login!</string>
    <string name="form_Senha">Informe a sua senha!</string>
    <string name="title_activity_listagem_eventos">ListagemEventosActivity</string>
    <string name="title_activity_teste">testeActivity</string>
    <string name="title_activity_listagem_tipos_eventos">ListagemTiposEventosActivity</string>
    <string name="title_activity_cadastro_eventos">CadastroEventosActivity</string>
    <string name="btnCasamento">Casamento</string>
    <string name="btnChurrasco">Churrasco</string>
    <string name="btnFesta15">Festa 15 Anos</string>
    <string name="btnEmpresarial"> Empresarial</string>
    <string name="btnInfantil">Festa Infantil</string>
    <string name="btnAniversario">Aniversario</string>
    <string name="btnGeral">Festa em Geral</string>
    <string name="btnFormatura">Formatura</string>
    <string name="title_activity_calculator">Calculator</string>
</resources>
