<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_login"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhit"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="100dp"
            android:background="@color/colorWhit"
            android:hint="@string/form_login"
            android:padding="5dp" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhit"
            android:hint="@string/form_senha"
            android:inputType="textPassword"
            android:padding="5dp" />

        <TextView
            android:id="@+id/txtEsqueceuSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/form_esquecerSenha"
            android:textColor="@color/colorWhit"
            android:textSize="12dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="50dp"
            android:height="40dp"
            android:background="@color/colorBordo"
            android:text="@string/btn_entrar"
            android:textColor="@color/colorWhit" />

        <TextView
            android:id="@+id/txtCadastrese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/form_cadsatrese"
            android:textColor="@color/colorWhit"
            android:textSize="12dp"
            android:textStyle="bold"
            android:onClick="CadastroUsuarioClick"/>

    </LinearLayout>

</ScrollView>